--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework=INFO
 logging.level.com.example.demo=DEBUG
+api.security.jwt.secret=${JWT_SECRET:my-secret-key}
+#spring.flyway.enabled=true
+#spring.flyway.locations=classpath:db/migration
