--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework=INFO
 logging.level.com.example.demo=DEBUG
-api.security.jwt.secret=${JWT_SECRET:my-secret-key}
-#spring.flyway.enabled=true
-#spring.flyway.locations=classpath:db/migration
+api.security.jwt.secret=AZTBDASDFGHJKLQWERTYUIOP1234567890
+springdoc.swagger-ui.path=/swagger-ui/index.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.enabled=true
