git commit -m "melhorando o aplication.proppertis e adicionando configuração inicial da aws"

--- a/backend/demo/pom.xml
+++ b/backend/demo/pom.xml
@@ -98,6 +98,11 @@
 			<groupId>software.amazon.awssdk</groupId>
 			<artifactId>regions</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>me.paulschwarz</groupId>
+			<artifactId>spring-dotenv</artifactId>
+			<version>4.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
