--- a/backend/demo/src/main/resources/application.properties
+++ b/backend/demo/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=demo
-server.port = 5050
-spring.datasource.url=jdbc:postgresql://localhost:5432/db_blog?useSSL=false&serverTimezone=UTC
-spring.datasource.username=postgres
-spring.datasource.password=postgre
+server.port=5050
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.org.springframework=INFO
 logging.level.com.example.demo=DEBUG
-api.security.jwt.secret=AZTBDASDFGHJKLQWERTYUIOP1234567890
 springdoc.swagger-ui.path=/swagger-ui/index.html
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.enabled=true
+
+# AWS - APENAS estrutura (sem valores)
+cloud.aws.region.static=us-east-1
+cloud.aws.s3.bucket=${AWS_S3_BUCKET:mymidia}
